--- a/src/partials/_commons.scss
+++ b/src/partials/_commons.scss
@@ -32,6 +32,11 @@ button {
    padding: 0 15px;
 }
 
+.centered-70 {
+   width: 70%;
+   margin: 0 auto;
+}
+
 .btn {
    font-size: 14px;
    font-weight: bold;
