--- a/src/partials/_header.scss
+++ b/src/partials/_header.scss
@@ -73,9 +73,6 @@ main {
       i {
          color: $btnColor;
       }
-      h4 {
-         margin: 30px 0;
-      }
       p {
          font-size: 14px;
          color: $fontGray;
@@ -83,39 +80,6 @@ main {
    }
 }
 
-#img-gallery {
-   padding: 50px 0 100px 0;
-   .row {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: space-between;
-      .col-2 {
-         width: calc((100% - 3 * 32%) / 2 + 2 * 32%);
-         background-color: red;
-      }
-      .col-1 {
-         width: 32%;
-         background-color: yellow;
-         height: 100px;
-         &.filled {
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-            .top-row {
-               width: 100%;
-               height: 50%;
-               background-color: red;
-            }
-            .bottom-row {
-               height: 50%;
-               width: 100%;
-               background-color: pink;
-            }
-         }
-      }
-
-   }
-}
 
 #online-course {
    background-image: url("../dist/images/online-course.png");
@@ -140,14 +104,6 @@ main {
       min-width: 700px;
       height: 80%;
       position: relative;
-
-
-      .review-content {
-         font-size: 18px;
-         margin: 20px 0;
-         font-weight: 200;
-         line-height: 30px;
-      }
       h2 {
          font-size: 18px;
       }
@@ -170,7 +126,6 @@ main {
 }
 
 #business {
-
    padding: 60px 50px;
    .business-card-container {
       @include flex-container;
@@ -178,13 +133,12 @@ main {
       .business-card {
          width: 49%;
          border: 1px solid #E4E8ED;
-         padding: 40px 20px;
+         padding: 40px 60px 40px 40px;
          @include flex-container;
-
          img {
             padding-right: 30px;
+            align-self: center;
          }
-
          .business-card__right {
             @include flex-container;
             margin: auto;
@@ -193,11 +147,54 @@ main {
          }
          p {
             font-size: 18px;
-            margin: 20px 0;
             font-weight: 200;
          }
+      }
+   }
+}
 
+#numbers {
+   background-color: $cardColor;
+   height: 700px;
+   background-image: url("../dist/images/we_proud.png");
+   background-position: bottom;
+   background-size: contain;
+   background-repeat: no-repeat;
+}
+
+#subscribe {
+   background-color: $subscribeColor;
+   padding: 50px 0;
+   .centered-70 {
+      color: white;
+      @include flex-container;
+      justify-content: space-between;
+      .col-left {
+         width: 60%;
+         padding-right: 10px;
+      }
+      .col-right {
+         width: 40%;
+         .title {
+            font-size: 14px;
+         }
+
+         #input-container {
+            width: 100%;
+            background-color: red;
+            height: 40px;
+            .btn-blue {
+               padding: 0 15px;
+            }
+            input {
+               width: 100%;
+               padding: 5px;
+            }
+         }
       }
    }
 
+}
+#popular-courses {
+   background-color: $cardColor;
 }
