--- a/src/partials/_commons.scss
+++ b/src/partials/_commons.scss
@@ -58,9 +58,9 @@ input {
 
 .title-box {
    text-align: center;
-   padding-top: 100px;
-   width: 60%;
-   margin: 0 auto 50px auto;
+   padding: 100px 0px 50px 0;
+   width: 40%;
+   margin: 0 auto;
 }
 
 .title-1 {
