--- a/src/partials/_header.scss
+++ b/src/partials/_header.scss
@@ -86,6 +86,7 @@ main {
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
+   background-color: $cardColor;
 }
 
 #reviews {
@@ -164,7 +165,6 @@ main {
       text-align: center;
       ul {
          list-style-type: none;
-         margin-top: 50px;
          @include flex-container;
          li {
             width: 25%;
@@ -215,6 +215,87 @@ main {
    }
 
 }
+
+.course-card__container {
+   display: flex;
+   flex-wrap: wrap;
+   justify-content: space-between;
+   padding-bottom: 0;
+}
+
+.course-card {
+   width: calc(100% / 6 - 10px);
+   margin-bottom: 10px;
+   min-width: 272px;
+   display: flex;
+   flex-direction: column;
+   border: 1px solid #E4E8ED;
+   .course-card__info {
+      padding: 15px;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      height: 100%;
+      .course-type {
+         color: #B3B3B3;
+         font-size: 14px;
+         margin-bottom: 10px;
+         &:after {
+            content: ">";
+         }
+      }
+      .course-card__top {
+         margin-bottom: 10px;
+      }
+      .course-card__bottom {
+         display: flex;
+         flex-direction: row;
+         justify-content: space-between;
+         align-items: center;
+         border-top: 1px solid #E4E8ED;
+         padding-top: 30px;
+         position: relative;
+         .course-discount {
+            position: absolute;
+            right: 0;
+            top: 10px;
+            color: #B3B3B3;
+            font-size: 14px;
+            text-decoration: line-through;
+         }
+         .course-hours {
+            font-size: 12px;
+         }
+         .course-star {
+            color: #EFB467;
+         }
+         .course-price {
+            font-size: 18px;
+            font-weight: bold;
+         }
+      }
+   }
+
+
+}
+
+.placeholder {
+  visibility: hidden;
+  height: 0;
+  padding: 0;
+  margin: 0;
+  border-top-width: 0;
+  border-bottom-width: 0;
+}
+
+
+
+
+#recent-courses {
+   max-width: 1720px;
+   margin: 0 auto;
+}
+
 #popular-courses {
    background-color: $cardColor;
 }
