Cards and navbar

--- a/src/partials/_commons.scss
+++ b/src/partials/_commons.scss
@@ -107,3 +107,12 @@ input {
 .flex {
    @include flex-container;
 }
+
+@mixin clearList {
+   ul {
+      list-style-type: none;
+      li {
+         display: inline-block;
+      }
+   }
+}
