--- a/src/partials/_header.scss
+++ b/src/partials/_header.scss
@@ -221,15 +221,44 @@ main {
    flex-wrap: wrap;
    justify-content: space-between;
    padding-bottom: 0;
+   padding: 0 50px;
 }
 
 .course-card {
    width: calc(100% / 6 - 10px);
-   margin-bottom: 10px;
-   min-width: 272px;
+   margin-bottom: 50px;
+   min-width: 220px;
    display: flex;
    flex-direction: column;
    border: 1px solid #E4E8ED;
+   background-color: white;
+
+   .course-card__img {
+      position: relative;
+      img {
+         width: 100%;
+      }
+      .release {
+         color: white;
+         border-radius: 5px;
+         position: absolute;
+         top: 10px;
+         right: 20px;
+         padding: 3px 5px;
+         z-index: 20;
+      }
+
+      .hot {
+         background-color: red;
+      }
+      .special {
+         background-color: orange;
+      }
+      .new {
+         background-color: green;
+      }
+   }
+
    .course-card__info {
       padding: 15px;
       display: flex;
@@ -269,10 +298,14 @@ main {
          .course-star {
             color: #EFB467;
          }
+         .star {
+            font-size: 14px;
+         }
          .course-price {
-            font-size: 18px;
+            font-size: 16px;
             font-weight: bold;
          }
+
       }
    }
 
@@ -294,6 +327,26 @@ main {
 #recent-courses {
    max-width: 1720px;
    margin: 0 auto;
+   .courses-nav-bar{
+      @include clearList;
+      text-align: center;
+      padding: 50px 0;
+      li {
+         color: $btnColor;
+         margin: 0 20px;
+         font-weight: 200;
+      }
+      .active {
+         background-color: #F0F4FA;
+         color: #777777;
+         border-radius: 50px;
+         padding: 15px 20px;
+      }
+   }
+   .btn-container {
+      text-align: center;
+      margin: 20px 0 100px 0;
+   }
 }
 
 #popular-courses {
