--- a/src/app.scss
+++ b/src/app.scss
@@ -1,4 +1,5 @@
 @import "partials/variables";
 @import "partials/commons";
 @import "partials/header";
+@import "partials/main";
 @import "partials/footer";
