--- a/src/partials/_header.scss
+++ b/src/partials/_header.scss
@@ -71,6 +71,44 @@ header {
    .nav-bar {
       justify-content: space-between;
       align-items: center;
+      #search-bar {
+         align-items: center;
+         #category {
+            align-items: center;
+            color: $headerFontColor;
+            i {
+               margin-right: 10px;
+            }
+            margin-right: 10px;
+         }
+         #search-container {
+            align-items: center;
+            height: 50px;
+            width: 350px;
+            .left {
+               width: calc(100% - 50px);
+               height: 100%;
+               input {
+                  height: 100%;
+                  padding-left: 15px;
+                  width: 100%;
+                  background-color: #EAEAEA;
+               }
+            }
+            .right {
+               width: 50px;
+               height: 100%;
+               background-color: $btnColor;
+               display: flex;
+               justify-content: center;
+               align-items: center;
+               i {
+                  color: white;
+                  font-size: 20px;
+               }
+            }
+         }
+      }
       .icon-link {
          margin-right: 10px;
          text-decoration: none;
