--- a/src/partials/_commons.scss
+++ b/src/partials/_commons.scss
@@ -140,6 +140,13 @@ select {
    flex-direction: column;
    border: 1px solid #E4E8ED;
    background-color: white;
+   transition: transform .4s;
+   &:hover {
+     transform: scale(1.3);
+     transform-origin: 50% 50%;
+     z-index: 20;
+     border: 1px solid orange;
+   }
    .course-card__img {
       position: relative;
       img {
