--- a/src/partials/_variables.scss
+++ b/src/partials/_variables.scss
@@ -1,7 +1,22 @@
-$btnColor: #1B5ECA;
+
+// colors
+$lightGray: #E4E8ED;
+$darkGray: #aaa;
+$blue: #195EC8;
 $cardColor: #F2F6FB;
 $fontGray: #A6ACB7;
-$headerFontColor: #777;
-$subscribeColor: #4ED7A8;
 
-$space: 50px;
+// borders
+$borderL: 30px;
+$borderM: 20px;
+$borderS: 15px;
+$borderXS: 10px;
+
+$container-space: 15px;
+
+
+// font-weights
+$fontWeightL: 600;
+$fontWeightM: 500;
+$fontWeightS: 400;
+$fontWeightXS: 300;
