--- a/src/partials/_footer.scss
+++ b/src/partials/_footer.scss
@@ -1,65 +1,55 @@
 footer {
-   padding: $space 0;
-   .footer-info {
-      display: flex;
-      flex-wrap: wrap;
-   }
+   padding-bottom: 50px;
    .col {
-
-      min-width: 200px;
       width: 25%;
       padding-right: 15px;
       h3 {
-         font-weight: 700;
+         font-size: 18px;
+         font-weight: $fontWeightL;
+         margin-bottom: $borderL;
       }
-      p {
-         font-size: 16px;
-         a {
-            text-decoration: none;
-            color: $btnColor;
+      a {
+         color: $blue;
+      }
+      i {
+         padding: 20px 20px 20px 0;
+         color: $darkGray;
+         font-size: 20px;
+      }
+      .blog-row {
+         align-items: center;
+         margin-bottom: $borderS;
+         img {
+            margin-right: 10px;
          }
-      }
-      .icons {
-         color: $fontGray;
-         padding-top: 10px;
-         i {
-            font-size: 30px;
-            padding-right: 15px;
+         h5 {
+            color: $darkGray;
+            font-size: 14px;
+            font-weight: $fontWeightM;
          }
-      }
-      #address {
-         margin-bottom: 10px;
-      }
-      #email {
-         margin-top: 10px;
-         color: $fontGray;
+         p {
+            color: $lightGray;
+         }
       }
       .page-list {
          width: 50%;
-         padding-right: 5px;
-         margin-left: 15px;
          li {
+            padding-bottom: 10px;
             overflow: hidden;
             text-overflow: ellipsis;
+            &:before {
+               content: "\2022";
+               font-size: 20px;
+               padding-right: 5px;
+            };
          }
       }
-      .blog-row {
-         display: flex;
-
-         margin-bottom: 10px;
-         .blog-info {
-            padding-left: 10px;
-            h5 {
-               color: $fontGray;
-               margin-bottom: 5px;
-            }
-            p {
-               color: #CCCCCC;
-               font-weight: 300;
-               font-size: 14px;
-            }
-         }
-
-      }
+   }
+   #address,
+   #fax {
+      margin-bottom: $borderS;
+   }
+   #email {
+      color: $darkGray;
    }
 }
