--- a/src/partials/_main.scss
+++ b/src/partials/_main.scss
@@ -1,180 +1,156 @@
-
-main {
-   .jumbotron {
-      height: 600px;
-      display: flex;
-      align-items: center;
-      .jumbotron-text {
-         width: 60%;
-         max-width: 700px;
-         h1 {
-            color: #273044;
-            margin-bottom: 40px;
-         }
-         h3 {
-            margin-bottom: 40px;
-         }
-      }
-   }
+// column width for blue cards section and gallery
+.col-2 {
+   width: calc(100% / 3 * 2 - 10px);
+}
+.col-1 {
+   width: calc(100% / 3 - 20px);
 }
 
-#investing {
-   position: relative;
-   h1 {
-      line-height: 64px;
-   }
-   .jumbotron-text {
-      padding-top: 100px;
-   }
-   img {
-      position: absolute;
-      right: 10%;
-      top: 50%;
-      transform: translateY(-50%);
-      z-index: -100;
-   }
-}
-
-.blue-card-container {
-   display: flex;
-   flex-wrap: wrap;
+// section with three blue cards in columns
+#blue-card-container {
+   @include flex-wrap;
    justify-content: space-between;
-   padding: 50px 0;
    .blue-card {
-      width: 32%;
+      // width: 32%;
       background-color: $cardColor;
-      padding: 30px;
+      padding: $borderL;
+      transition: transform 1s;
+      i, h4{
+         margin-bottom: $borderL;
+      }
       i {
-         color: $btnColor;
+         color: $blue;
+      }
+      h4 {
+         font-size: 16px;
+         font-weight: 500;
       }
       p {
-         font-size: 14px;
-         color: $fontGray;
+         opacity: 0.5;
       }
       &:hover {
          transform: translateY(-30px);
-      }
-   }
-}
-
-#online-course {
-   background-image: url("../dist/images/online-course.png");
-   background-repeat: no-repeat;
-   background-position: center;
-   background-size: cover;
-   background-color: $cardColor;
-}
-
-#reviews {
-   height: 600px;
-   background-image: url("../dist/images/brooke-cagle-224821-unsplash-1-1920x700.jpg");
-   background-size: cover;
-   background-repeat: no-repeat;
-   .flex-container {
-      @include flex-container;
-      align-items: center;
-   }
-   .review-info {
-      padding: 80px 90px;
-      background-color: white;
-      width: 65%;
-      min-width: 700px;
-      height: 80%;
-      position: relative;
-      h2 {
-         font-size: 18px;
-      }
-      .person-info {
-         font-size: 14px;
-         font-weight: 300;
-      }
-      .triangle-right {
-         position: absolute;
-         right: -15px;
-         top: 50%;
-         transform: translateY(-50%);
-         width: 0;
-         height: 0;
-         border-top: 10px solid transparent;
-         border-left: 15px solid WHITE;
-         border-bottom: 10px solid transparent;
-    }
-   }
-}
-
-#business {
-   padding: 60px 50px;
-   .business-card-container {
-      @include flex-container;
-      justify-content: space-between;
-      .business-card {
-         width: 49%;
-         border: 1px solid #E4E8ED;
-         padding: 40px 60px 40px 40px;
-         @include flex-container;
-         img {
-            padding-right: 30px;
-            align-self: center;
-         }
-         .business-card__right {
-            @include flex-container;
-            margin: auto;
-            flex-direction: column;
-            align-items: flex-start;
-         }
          p {
-            font-size: 18px;
-            font-weight: 200;
+            opacity: 1;
          }
       }
    }
 }
 
+// section course callery - grid images
+#course-gallery {
+   .row-gallery {
+      padding-bottom: $borderL;
+      display: flex;
+      justify-content: space-between;
+      .col-1 {
+         display: flex;
+         flex-direction: column;
+         &.col-special {
+            justify-content: space-between;
+         }
+      }
+   }
+   .gallery-item {
+      img {
+         width: 100%;
+         margin-bottom: $borderXS;
+         transition: all 0.3s;
+      }
+      .img-container {
+         overflow: hidden;
+      }
+      .item-info {
+         display: flex;
+         justify-content: space-between;
+         h4 {
+            font-size: 16px;
+            font-weight: 500;
+         }
+      }
+      &:hover {
+         img {
+            transform: scale(1.1);
+         }
+         h4 {
+            color: $blue;
+         }
+      }
+   }
+}
+
+// section with grid of recent courses
+#courses-nav-bar {
+   text-align: center;
+   padding-bottom: 50px;
+   li {
+      color: $blue;
+      margin: 0 20px;
+   }
+   .active {
+      background-color: #F0F4FA;
+      color: #777777;
+      border-radius: 50px;
+      padding: 10px 20px;
+   }
+}
+
+// container for show all
+#btn-container {
+   text-align: center;
+   padding-bottom: 50px;
+}
+
+// section with munber info for courses, students etc.
 #numbers {
    background-color: $cardColor;
+   height: 800px;
+   background-image: url("../dist/images/we_proud.png");
+   background-position: bottom;
+   background-size: contain;
+   background-repeat: no-repeat;
+   text-align: center;
+   .title-box {
+      padding: 50px 0;
+   }
    #numbers-info {
-      height: 500px;
-      background-image: url("../dist/images/we_proud.png");
-      background-position: bottom;
-      background-size: contain;
-      background-repeat: no-repeat;
-      text-align: center;
-      ul {
-         list-style-type: none;
-         @include flex-container;
-         li {
-            width: 25%;
-            padding: 20px 0;
-            height: max-content;
-            .nmb {
-               font-size: 70px;
-               font-weight: 300;
-            }
-            .sub-nmb {
-               font-size: 20px;
-            }
-            &:not(:last-child) {
-               border-right: 1px solid #E4E8ED;;
-            }
+      li {
+         width: calc(24% - 1px);
+         padding: 20px 0;
+         height: max-content;
+         .nmb {
+            font-size: 70px;
+            font-weight: $fontWeightXS;
+         }
+         .sub-nmb {
+            font-size: 20px;
+            font-weight: $fontWeightXS;
+         }
+         &:not(:last-child) {
+            border-right: 1px solid #E4E8ED;;
          }
       }
    }
 }
 
+// subscribe section
 #subscribe {
-   background-color: $subscribeColor;
+   background-color: #4ED7A8;
    padding: 50px 0;
-   .centered-70 {
+   .centered-small {
       color: white;
-      @include flex-container;
+      display: flex;
       .col-left {
          width: 60%;
          padding-right: 10px;
+         h2 {
+            margin-bottom: 20px;
+         }
       }
       .col-right {
          width: 40%;
-         .title {
-            font-size: 14px;
+         h4 {
+            margin-bottom: 20px;
          }
          #input-container {
             height: 40px;
@@ -190,36 +166,14 @@ main {
    }
 }
 
-
-#recent-courses {
-   max-width: 1720px;
-   margin: 0 auto;
-   .courses-nav-bar{
-      @include clearList;
-      text-align: center;
-      padding-bottom: 50px;
-      li {
-         color: $btnColor;
-         margin: 0 20px;
-         font-weight: 200;
-      }
-      .active {
-         background-color: #F0F4FA;
-         color: #777777;
-         border-radius: 50px;
-         padding: 15px 20px;
-      }
-   }
-   .btn-container {
-      text-align: center;
-      margin: 20px 0 100px 0;
-   }
-}
-
+// section with grid as recent courses
 #popular-courses {
    background-color: $cardColor;
+   .title-box {
+      padding-top: 50px;
+      padding-bottom: 40px;
+   }
    .arrow-container {
-      padding-bottom: 50px;
       text-align: center;
       .arrow {
          padding: 15px 20px;
@@ -235,56 +189,57 @@ main {
    }
 }
 
-#course-gallery {
-   padding-top: 100px;
-   .row-gallery {
-      padding-bottom: 10px;
+// two cards - business info
+#business {
+   padding: 50px 50px;
+   display: flex;
+   justify-content: space-between;
+   .business-card {
+      width: 49%;
+      border: 1px solid #E4E8ED;
+      padding: 40px 60px 40px 40px;
       display: flex;
-      justify-content: space-between;
-      .col-2 {
-         width: calc(100% / 3 * 2 - 20px);
+      img {
+         padding-right: 30px;
+         align-self: center;
       }
-      .col-1 {
-         width: calc(100% / 3 - 40px);
+      .business-card__right {
          display: flex;
+         margin: auto;
          flex-direction: column;
-         &.col-special {
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-         }
+         align-items: flex-start;
       }
    }
-   .gallery-item {
-      width: 100%;
-      img {
-         width: 100%;
-         margin-bottom: 10px;
-         cursor: pointer;
-         transition: all 0.3s;
-      }
-      .img-container:hover img {
-         transform: scale(1.1);
-      }
+}
 
-      .img-container {
-         overflow: hidden;
-      }
-      .item-info {
-         display: flex;
-         justify-content: space-between;
-         a {
-            text-decoration: none;
-            color: black;
-            font-size: 18px;
-            &:hover {
-               color: $btnColor;
-            }
-         }
-         span {
-            font-size: 14px;
-            pointer: cursor;
-         }
-      }
+// reviews sith background img
+#reviews {
+   height: 600px;
+   background-image: url("../dist/images/brooke-cagle-224821-unsplash-1-1920x700.jpg");
+   background-size: cover;
+   background-repeat: no-repeat;
+   .flex-container {
+      display: flex;
+      align-items: center;
+      height: 100%;
+   }
+   .review-info {
+      padding: 80px 90px;
+      background-color: white;
+      width: 65%;
+      min-width: 700px;
+      height: 80%;
+      position: relative;
+      .triangle-right {
+         position: absolute;
+         right: -15px;
+         top: 50%;
+         transform: translateY(-50%);
+         width: 0;
+         height: 0;
+         border-top: 10px solid transparent;
+         border-left: 15px solid white;
+         border-bottom: 10px solid transparent;
+    }
    }
 }
