--- a/src/partials/_header.scss
+++ b/src/partials/_header.scss
@@ -10,6 +10,7 @@
       // left side of header-top
       #language {
          color: $darkGray;
+         @include changeColorHover(#0A0A0A);
       }
       // right side of header-top
       .right {
@@ -19,6 +20,7 @@
             li {
                padding: 0 20px;
                position: relative;
+               @include changeColorHover(#0A0A0A);
                .new {
                   position: absolute;
                   right: 2%;
@@ -35,9 +37,7 @@
             i {
                padding-left: 15px;
                font-size: 16px;
-               &:hover {
-                  background-color: $blue;
-               }
+               @include changeColorHover($blue);
             }
 
          }
@@ -59,10 +59,10 @@
       align-items: center;
       padding-right: 10px;
       position: relative;
-      @include setPointer;
       i {
          padding-right: 5px;
       }
+      @include changeColorHover($blue);
       &:hover #category-list {
          display: block;
          z-index: 20;
@@ -118,5 +118,6 @@
    #book-mark {
       font-size: 20px;
       color: $blue;
+      @include setPointer;
    }
 }
