--- a/src/partials/_commons.scss
+++ b/src/partials/_commons.scss
@@ -166,6 +166,7 @@ section {
      transform-origin: 50% 50%;
      z-index: 20;
      border: 1px solid orange;
+     @include setPointer;
    }
    // img
    .course-card__img {
