--- a/src/partials/_footer.scss
+++ b/src/partials/_footer.scss
@@ -10,11 +10,15 @@ footer {
       }
       a {
          color: $blue;
+         &:hover {
+            text-decoration: underline;
+         }
       }
       i {
          padding: 20px 20px 20px 0;
          color: $darkGray;
          font-size: 20px;
+         @include changeColorHover($blue);
       }
       .blog-row {
          align-items: center;
@@ -30,6 +34,9 @@ footer {
          p {
             color: $lightGray;
          }
+         &:hover {
+            @include setPointer;
+         }
       }
       .page-list {
          width: 50%;
@@ -41,7 +48,10 @@ footer {
                content: "\2022";
                font-size: 20px;
                padding-right: 5px;
-            };
+            }
+            &:hover {
+               @include changeColorHover($blue);
+            }
          }
       }
    }
@@ -51,5 +61,9 @@ footer {
    }
    #email {
       color: $darkGray;
+      &:hover {
+         @include setPointer;
+         text-decoration: underline;
+      }
    }
 }
